tests/golden/type_errors/non_exhaustive_bool_literal_match.cd
fun describe(value: bool): string {
  return match value {
    true => "yes",
  };
}
