tests/golden/type_errors/non_exhaustive_bool_literal_match.err
Type error at 2:10: non-exhaustive match: missing false
    return match value {
           ^
